--- a/module-9/tasks/product-form/index.html
+++ b/module-9/tasks/product-form/index.html
@@ -16,29 +16,9 @@
 <div id="root"></div>
 
 <script type="module">
-  import ProductFormComponent from './index.js';  
+  import ProductFormComponent from './index.js';    
 
-  const productData = {
-    title: 'foo',
-    description: 'bar',
-    subcategory: '',
-    price: '1',
-    discount: '1',
-    quantity: '1',
-    status: '',
-    images: [
-      {
-        url: 'https://i.imgur.com/7SPzszI.jpg',
-        name: 'foo.jpg'
-      },
-      {
-        url: 'https://i.imgur.com/7SPzszI.jpg',
-        name: 'bar.jpg'
-      }
-    ]
-  };
-
-  const productForm = new ProductFormComponent(productData);
+  const productForm = new ProductFormComponent('101-planset-lenovo-yt3-x90l-64-gb-3g-lte-cernyj');
 
   root.append(productForm.element);
 
